# BlackJack_GUI

./: .gitmodules  CMakeLists.txt  README.md  res.qrc
i18n/: BJGUI_en_US.ts  BJGUI_uk_UA.ts
src/: main.cpp
src/Core/: blackjackgame.cpp  blackjackgame.h  carddata.h  chipcalculator.cpp  chipcalculator.h  deck.cpp  deck.h  gamerules.cpp  gamerules.h  gamesession.cpp  gamesession.h  hand.cpp  hand.h
src/Infrastructure/Helpers/: languagehelper.h  settingshelper.cpp  settingshelper.h
src/Infrastructure/Service/: audiomanager.cpp  audiomanager.h  balancemanager.cpp  balancemanager.h  skinmanager.cpp  skinmanager.h
src/Infrastructure/StateMachine/: IGameState.h
src/Infrastructure/StateMachine/States/: bettingstate.cpp  bettingstate.h  introstate.cpp  introstate.h
src/presentation/CustomWidgets/DraggableQFrame/: draggableframe.cpp  draggableframe.h
src/presentation/CustomWidgets/SlidingStackedWidget/: slidingstackedwidget.cpp
src/presentation/Dimmer/: overlaywidget.cpp  overlaywidget.h
src/presentation/Icons/: icons.h
src/presentation/Outcomes/: outcome.cpp  outcome.h  outcome.ui
src/presentation/Styles/: styles.h
src/presentation/widgets/: mainwindow.ui
src/presentation/widgets/BetStackWidget/: betstackwidget.cpp  betstackwidget.h
src/presentation/widgets/BettingPanel/: bettingpanel.cpp  bettingpanel.h  bettingpanel.ui  temp.ui
src/presentation/widgets/Card/: cardwidget.cpp  cardwidget.h
src/presentation/widgets/ClickableChipStack/: clickablechipstack.cpp  clickablechipstack.h
src/presentation/widgets/Hand/: handwidget.cpp  handwidget.h
src/presentation/widgets/MainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui  temp2.ui  temp3.ui  temp_delete_later.ui
src/presentation/widgets/Settings/: settingswindow.cpp  settingswindow.h  settingswindow.ui
